2011-03-25 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	Merged bugfix from trunk.

	* godmode/modules/module_list.php: Fixed wrong variable call.

2011-03-22 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* include/functions_config.php: fixed the update "collection_max_size"
	value.
	
	Fixes: #3220485
 
2011-03-22 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* include/functions.php: fixed the function "safe_url_extraclean" to pass
	the url with character -.
	
	Fixes: #3234360

2011-03-17  Sancho Lerena <slerena@artica.es>

	* include/functions_alerts.php: erased the "module_action_threshold"
	in the function "add_alert_agent_module_action".
        
 	* godmode/alerts/alert_list.php: cleaned source code style.

2011-03-16  Sancho Lerena <slerena@artica.es>

        * operation/agentes/estado_monitores.php: Fixed an ugly error when cannot
        get the policy name. Show unknown in that case, avoiding the SQL error.

2011-03-11 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* extensions/agents_modules.php, operation/search_modules.php,
	operation/agentes/status_monitor.php,
	operation/agentes/estado_ultimopaquete.php,
	operation/agentes/estado_monitores.php: fixed the label for the graphs in
	new window.
	
	Fixes: #3203474

2011-03-03 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* include/functions_reporting.php: refixed the status when the agent have
	any module critical and any alert fired.

2011-03-02 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* include/functions_reporting.php: added the call to
	"get_agentmodule_status" without check the alerts status for the color.
	 
	* include/functions_db.php: in function "get_agentmodule_status" added new
	parameter "$without_alerts" flag for check without alerts. 

2011-03-01 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	Merged bugfix from trunk.
